# shopitappd

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: schedule.yml
shopitappd/: constants.py  main.py  product.py  shopify_elements.py  shopify_header.py  untappd_elements.py
tests/: test_product.py
